<resources>
    <string name="app_name">ToDo List</string>
    <string name="tasks">tasks</string>
    <string name="hello">Hello</string>
    <string name="name">Alexander Petrov</string>
    <string name="category">Category</string>
    <string name="today">Today\'s Task</string>
    <string name="come_back">Come back</string>
    <string name="add_new_name">Add new name …</string>
    <string name="add_sub_task_name">Add sub task name …</string>
    <string name="add_new_task">Add new task …</string>
    <string name="add_description_task">Add description task …</string>
    <string name="add_new_task_text">Add New Task</string>
    <string name="no_description_task">This task has no description</string>
    <string name="message">Be productive today\'s, and let\'s make some wonderful world with it.</string>
    <string name="save">Save</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="attention">Task title don\'t be empty!!</string>
</resources>